@@ -5,13 +5,11 @@ import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 @UtilityClass
 public class ServerHelper {
-    private static final List<String> IP_HEADER_CANDIDATES = Arrays.asList(
+    private static final List<String> IP_HEADER_CANDIDATES = List.of(
             "CF-Connecting-IP",
             "TRUE-CLIENT-IP",
             "X-Forwarded-For",
@@ -33,12 +31,16 @@ public class ServerHelper {
             return StringUtils.EMPTY;
         }
         var request = ((ServletRequestAttributes) requestContext).getRequest();
-        return IP_HEADER_CANDIDATES
+        var clientIp = IP_HEADER_CANDIDATES
                 .stream()
                 .map(request::getHeader)
                 .filter(ipList -> StringUtils.isNotBlank(ipList) && !"unknown".equalsIgnoreCase(ipList))
                 .findFirst()
                 .map(it -> it.split(",")[0])
                 .orElse(request.getRemoteAddr());
+        if ("0:0:0:0:0:0:0:1".equals(clientIp)) {
+            return "127.0.0.1";
+        }
+        return clientIp;
     }
 }
